syntax = "proto2";

option java_package = "com.ebay.hadoop.blitzwing.generated.executor.plan.types";
option java_outer_classname = "TypesProto";

enum BasicTypeProto {
    NONE = 0;     // arrow::Type::NA
    BOOL = 1;     // arrow::Type::BOOL
    UINT8 = 2;    // arrow::Type::UINT8
    INT8 = 3;     // arrow::Type::INT8
    UINT16 = 4;   // represents arrow::Type fields in src/arrow/type.h
    INT16 = 5;
    UINT32 = 6;
    INT32 = 7;
    UINT64 = 8;
    INT64 = 9;
    HALF_FLOAT = 10;
    FLOAT = 11;
    DOUBLE = 12;
    UTF8 = 13;
    BINARY = 14;
    FIXED_SIZE_BINARY = 15;
    DATE32 = 16;
    DATE64 = 17;
    TIMESTAMP = 18;
    TIME32 = 19;
    TIME64 = 20;
    INTERVAL = 21;
    DECIMAL = 22;
    LIST = 23;
    STRUCT = 24;
    UNION = 25;
    DICTIONARY = 26;
    MAP = 27;
}

message ExprTypeProto {
    required BasicTypeProto basic_type = 1;
    required bool nullable = 2;
    optional string name = 3;
}

message SchemaProto {
    repeated ExprTypeProto fields = 1;
}